fix: About Us page for smartphones overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ p {
     margin-bottom: 15px;
     text-align: left;
     letter-spacing: 2px;
-    font-size: 14px;
+    font-size: 17px;
     text-indent: 10px;
     line-height: 1.5;
 }
@@ -456,7 +456,7 @@ form a {
 .grid-container--fill {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat(4, 500px);
+    grid-template-rows: repeat(4, 600px);
     margin-top: 1rem;
     column-gap: 1rem;
     row-gap: 1rem;
